refactor: stream을 list로 변환하는 메소드 리팩토링